<resources>
    <string name="app_name">Task Manager</string>
    <string name="task_manager">Task Manager</string>
    <string name="add_task">Add Task</string>
    <string name="enter_the_title">Enter The Title</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="tasks">Tasks</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="update_task">Update Task</string>
    <string name="add_new_task">Add New Task</string>
    <string name="the_task_manager">The-Task-Manager</string>
    <string name="click_here_to_add_a_new_task"><![CDATA[Click here to add a new Task ---->]]></string>
</resources>