<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity"
    android:background="@drawable/bgg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/addTaskHedding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/add_new_task"

            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginHorizontal="15dp" />

        <ImageView
            android:id="@+id/SaveButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/addTaskHedding"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="6dp"

            app:srcCompat="@drawable/baseline_done_24" />

        <EditText
            android:id="@+id/TitleEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/addTaskHedding"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/blueborder"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/andika_new_basic"
            android:hint="@string/Title"
            android:maxLines="1"
            android:padding="12dp"
            android:textColorHint="#8F8F8F"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ContentEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/TitleEditText"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/blueborder"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/andika_new_basic"
            android:gravity="top"
            android:hint="@string/Description"
            android:padding="12dp"
            android:textColorHint="#8F8F8F"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>